=========
Changelog
=========

Version 4.2.1 Beta

- Added new Traditional Chinese localization by Jill! Thanks!
- Simplified Chinese localization updates and ReadMe by yeachan.

- Fixes:
	- Added rewards for TK: The Eye: Kael'thas and the Verdant Sphere



Version 4.2.0

- Minor changes to work with Patch 3.0.2.
- Quest Links! You can now link to quests in a chat window by Shift + Clicking a quest's name in the AtlasQuest list. As with Item Links, some quests don't seem to link if the server hasn't seen them for a while.
- Changed text color for "Options" menu to match rest of Atlas/AtlasQuest. (Suggested by Telchar)
- Made background of Options window solid black for easier reading.
- Made "Story" button larger so German text isn't bigger than the button. (Suggested by Telchar)
- Moved "AtlasQuest" button in the AtlasFrame to same level as Atlas' "Options" button. (Suggested by Telchar)
- AtlasQuest side panel will no longer disappear when Atlas changes to an unsupported map, such as Entrances, Flight paths, etc. (Suggested by Telchar)
- Fixed BRD Horde quests "Heart of the Mountain" and "A Taste of Flame". (Reported by Vytae)
- German localization updates by Telchar.
- Simplified Chinese localization updates by yeachan.
- Increased maximum number of quests to 20. Had to shrink Story and Option buttons a bit to fit it though.
- The usual minor typos fixed and such.

- Quests added:
	- Old Hillsbrad: Nice Hat...
	- Naxxramas: Omarion's Handbook
	- Blackrock Depths: Save Brewfest! (Seasonal)
	- Blackrock Depths: Insult Coren Direbrew (Daily - Seasonal)




Version 4.1.2

- Compatibility with Atlas 1.12.
- Simplified Chinese localization updates by yeachan.
- German localization updates by Telchar.
- The usual fixes for typos and some clarification in quest information.

- Quests added:
	- Dire Maul East: The Prison's Bindings (Warlock)
	- Slave Pens: Ahune, the Frost Lord
	- Slave Pens: Ahune is Here!
	- Slave Pens: Summon Ahune
	- Slave Pens: Shards of Ahune



